--- a/ECF_Back_Application/pom.xml
+++ b/ECF_Back_Application/pom.xml
@@ -27,6 +27,19 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
         </dependency>
+
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.0</version> <!-- Mettez à jour avec la dernière version disponible -->
+        </dependency>
+
+        <!-- Implémentation Hibernate Validator -->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>7.0.2.Final</version> <!-- Mettez à jour avec la dernière version disponible -->
+        </dependency>
     </dependencies>
 
     <build>
