--- a/ECF_Back_Application/src/main/resources/hibernate.properties
+++ b/ECF_Back_Application/src/main/resources/hibernate.properties
@@ -1,6 +1,6 @@
 hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 hibernate.connection.driver_class = com.mysql.jdbc.Driver
-hibernate.connection.url = jdbc:mysql://localhost:3306/Data_Base
+hibernate.connection.url = jdbc:mysql://localhost:3306/Data_Base2
 hibernate.connection.username = root
 hibernate.connection.password = mot.de.Passe1234
 hibernate.show_sql = true
